// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RefineInventory stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="border border-border mb-4 rounded-ui"
    data-state="open"
    data-testid="sf-store-inventory-filter"
  >
    <h3
      class="text-sm font-medium text-left leading-normal p-4 transition-colors hover:bg-muted/60"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="true"
        class="flex items-center justify-between w-full text-left px-1 py-1 -mx-1 cursor-pointer"
        data-state="open"
        type="button"
      >
        <span
          class="text-sm leading-none text-left font-medium"
        >
          Shop by Availability
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
      </button>
    </h3>
    <div
      class="px-4 pb-4"
      data-state="open"
      id="radix-_r_0_"
      style="transition-duration: 0s; animation-name: none;"
    >
      <div
        class="flex items-start space-x-2 p-2"
      >
        <button
          aria-checked="false"
          aria-label="Filter Products by Store Availability at Select Store"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
          data-slot="checkbox"
          data-state="unchecked"
          data-testid="sf-store-inventory-filter-checkbox"
          id="inventory-filter"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="text-sm font-medium leading-none cursor-pointer"
          for="inventory-filter"
        >
          In stock at  
          <span
            aria-label="Select Store"
            class="underline cursor-pointer hover:opacity-70"
            role="button"
            tabindex="0"
          >
            Select Store
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="border border-border mb-4 rounded-ui"
    data-state="open"
    data-testid="sf-store-inventory-filter"
  >
    <h3
      class="text-sm font-medium text-left leading-normal p-4 transition-colors hover:bg-muted/60"
    >
      <button
        aria-controls="radix-_r_4_"
        aria-expanded="true"
        class="flex items-center justify-between w-full text-left px-1 py-1 -mx-1 cursor-pointer"
        data-state="open"
        type="button"
      >
        <span
          class="text-sm leading-none text-left font-medium"
        >
          Shop by Availability
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
      </button>
    </h3>
    <div
      class="px-4 pb-4"
      data-state="open"
      id="radix-_r_4_"
      style="transition-duration: 0s; animation-name: none;"
    >
      <div
        class="flex items-start space-x-2 p-2"
      >
        <button
          aria-checked="false"
          aria-label="Filter Products by Store Availability at Select Store"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
          data-slot="checkbox"
          data-state="unchecked"
          data-testid="sf-store-inventory-filter-checkbox"
          id="inventory-filter"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="text-sm font-medium leading-none cursor-pointer"
          for="inventory-filter"
        >
          In stock at  
          <span
            aria-label="Select Store"
            class="underline cursor-pointer hover:opacity-70"
            role="button"
            tabindex="0"
          >
            Select Store
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > FilterChecked story renders and matches snapshot 1`] = `
<div>
  <div>
    <div
      class="border border-border mb-4 rounded-ui"
      data-state="open"
      data-testid="sf-store-inventory-filter"
    >
      <h3
        class="text-sm font-medium text-left leading-normal p-4 transition-colors hover:bg-muted/60"
      >
        <button
          aria-controls="radix-_r_2_"
          aria-expanded="true"
          class="flex items-center justify-between w-full text-left px-1 py-1 -mx-1 cursor-pointer"
          data-state="open"
          type="button"
        >
          <span
            class="text-sm leading-none text-left font-medium"
          >
            Shop by Availability
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-minus size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
          </svg>
        </button>
      </h3>
      <div
        class="px-4 pb-4"
        data-state="open"
        id="radix-_r_2_"
        style="transition-duration: 0s; animation-name: none;"
      >
        <div
          class="flex items-start space-x-2 p-2"
        >
          <button
            aria-checked="true"
            aria-label="Filter Products by Store Availability at Downtown Store"
            class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
            data-slot="checkbox"
            data-state="checked"
            data-testid="sf-store-inventory-filter-checkbox"
            id="inventory-filter"
            role="checkbox"
            type="button"
            value="on"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="checked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </button>
          <label
            class="text-sm font-medium leading-none cursor-pointer"
            for="inventory-filter"
          >
            In stock at  
            <span
              aria-label="Change Store"
              class="underline cursor-pointer hover:opacity-70"
              role="button"
              tabindex="0"
            >
              Downtown Store
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="border border-border mb-4 rounded-ui"
    data-state="open"
    data-testid="sf-store-inventory-filter"
  >
    <h3
      class="text-sm font-medium text-left leading-normal p-4 transition-colors hover:bg-muted/60"
    >
      <button
        aria-controls="radix-_r_3_"
        aria-expanded="true"
        class="flex items-center justify-between w-full text-left px-1 py-1 -mx-1 cursor-pointer"
        data-state="open"
        type="button"
      >
        <span
          class="text-sm leading-none text-left font-medium"
        >
          Shop by Availability
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
      </button>
    </h3>
    <div
      class="px-4 pb-4"
      data-state="open"
      id="radix-_r_3_"
      style="transition-duration: 0s; animation-name: none;"
    >
      <div
        class="flex items-start space-x-2 p-2"
      >
        <button
          aria-checked="false"
          aria-label="Filter Products by Store Availability at Select Store"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
          data-slot="checkbox"
          data-state="unchecked"
          data-testid="sf-store-inventory-filter-checkbox"
          id="inventory-filter"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="text-sm font-medium leading-none cursor-pointer"
          for="inventory-filter"
        >
          In stock at  
          <span
            aria-label="Select Store"
            class="underline cursor-pointer hover:opacity-70"
            role="button"
            tabindex="0"
          >
            Select Store
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > WithStoreSelected story renders and matches snapshot 1`] = `
<div>
  <div
    class="border border-border mb-4 rounded-ui"
    data-state="open"
    data-testid="sf-store-inventory-filter"
  >
    <h3
      class="text-sm font-medium text-left leading-normal p-4 transition-colors hover:bg-muted/60"
    >
      <button
        aria-controls="radix-_r_1_"
        aria-expanded="true"
        class="flex items-center justify-between w-full text-left px-1 py-1 -mx-1 cursor-pointer"
        data-state="open"
        type="button"
      >
        <span
          class="text-sm leading-none text-left font-medium"
        >
          Shop by Availability
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
      </button>
    </h3>
    <div
      class="px-4 pb-4"
      data-state="open"
      id="radix-_r_1_"
      style="transition-duration: 0s; animation-name: none;"
    >
      <div
        class="flex items-start space-x-2 p-2"
      >
        <button
          aria-checked="false"
          aria-label="Filter Products by Store Availability at Select Store"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
          data-slot="checkbox"
          data-state="unchecked"
          data-testid="sf-store-inventory-filter-checkbox"
          id="inventory-filter"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="text-sm font-medium leading-none cursor-pointer"
          for="inventory-filter"
        >
          In stock at  
          <span
            aria-label="Select Store"
            class="underline cursor-pointer hover:opacity-70"
            role="button"
            tabindex="0"
          >
            Select Store
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
